[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'


[project]
name = 'MM-RAG'
authors = [
	{name='Marco Tambasco', email='tambascomarco35@gmail.com'}
]
requires-python = '>=3.11'
dependencies = [
	'langchain',
	'pillow',
  'langgraph',
  'boto3',
  'flask',
  'matplotlib'
]
version = '0.0.1'


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
launch-cli = "mm_rag.cli_entrypoints.main:main"
write-env = "mm_rag.cli_entrypoints.configure:write_env"