[project]
name = "cdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-aws-apigatewayv2-authorizers-alpha>=2.64.0a0",
    "aws-cdk-aws-apigatewayv2-integrations-alpha>=2.63.1a0",
    "aws-cdk-lib==2.199.0",
    "constructs>=10.0.0,<11.0.0",
]

[dependency-groups]
dev = [
    "pytest==7",
]
